# quiz_app

./: .dockerignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
envs/: local.env
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_auto_20210810_2134.py  0003_rename_question_questionbase.py  0004_questionbase_points_count.py  0005_auto_20220205_2143.py
main_app/templates/main_app/: base.html  make_question.html  quiz.html  score.html
tests/: settings.py  urls.py
users/: views.py
users/templates/registration/: logged_out.html  login.html  register.html
