[tool.poetry]
name = "quiz_app"
version = "0.1.0"
description = ""
authors = ["Dmytro <46905727+dmvrb98@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
psycopg = "^3.0.8"
bootstrap4 = "^0.1.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^21.2"
pytest = "^7.0.0"
coverage = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
